Packages_2024/asound2_1.2.11_(alsa)/asound/pcm.inc

function snd_pcm_hw_params_set_periods_min(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_periods_max(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_periods_minmax(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; min: Pdword; mindir: Plongint; max: Pdword; maxdir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_periods_near(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_periods_first(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_periods_last(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_periods_integer(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_buffer_time(params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_buffer_time_min(params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_buffer_time_max(params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_test_buffer_time(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: dword; dir: longint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_time(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: dword; dir: longint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_time_min(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_time_max(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_time_minmax(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; min: Pdword; mindir: Plongint; max: Pdword; maxdir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_time_near(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_time_first(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_time_last(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Pdword; dir: Plongint): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_buffer_size(params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_buffer_size_min(params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_get_buffer_size_max(params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_test_buffer_size(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Tsnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_size(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Tsnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_size_min(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_size_max(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_size_minmax(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; min: Psnd_pcm_uframes_t; max: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_size_near(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_size_first(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_hw_params_set_buffer_size_last(pcm: Psnd_pcm_t; params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;

function snd_pcm_hw_params_get_min_align(params: Psnd_pcm_hw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_sizeof: Tsize_t; cdecl; external libasound;

function snd_pcm_sw_params_malloc(ptr: PPsnd_pcm_sw_params_t): longint; cdecl; external libasound;
procedure snd_pcm_sw_params_free(obj: Psnd_pcm_sw_params_t); cdecl; external libasound;
procedure snd_pcm_sw_params_copy(dst: Psnd_pcm_sw_params_t; src: Psnd_pcm_sw_params_t); cdecl; external libasound;
function snd_pcm_sw_params_get_boundary(params: Psnd_pcm_sw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;

function snd_pcm_sw_params_set_tstamp_mode(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t; val: Tsnd_pcm_tstamp_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_get_tstamp_mode(params: Psnd_pcm_sw_params_t; val: Psnd_pcm_tstamp_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_set_tstamp_type(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t; val: Tsnd_pcm_tstamp_type_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_get_tstamp_type(params: Psnd_pcm_sw_params_t; val: Psnd_pcm_tstamp_type_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_set_avail_min(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t; val: Tsnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_get_avail_min(params: Psnd_pcm_sw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_set_period_event(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t; val: longint): longint; cdecl; external libasound;
function snd_pcm_sw_params_get_period_event(params: Psnd_pcm_sw_params_t; val: Plongint): longint; cdecl; external libasound;
function snd_pcm_sw_params_set_start_threshold(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t; val: Tsnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_get_start_threshold(paramsm: Psnd_pcm_sw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_set_stop_threshold(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t; val: Tsnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_get_stop_threshold(params: Psnd_pcm_sw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_set_silence_threshold(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t; val: Tsnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_get_silence_threshold(params: Psnd_pcm_sw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_set_silence_size(pcm: Psnd_pcm_t; params: Psnd_pcm_sw_params_t; val: Tsnd_pcm_uframes_t): longint; cdecl; external libasound;
function snd_pcm_sw_params_get_silence_size(params: Psnd_pcm_sw_params_t; val: Psnd_pcm_uframes_t): longint; cdecl; external libasound;

function snd_pcm_access_mask_sizeof: Tsize_t; cdecl; external libasound;

function snd_pcm_access_mask_malloc(ptr: PPsnd_pcm_access_mask_t): longint; cdecl; external libasound;
procedure snd_pcm_access_mask_free(obj: Psnd_pcm_access_mask_t); cdecl; external libasound;
procedure snd_pcm_access_mask_copy(dst: Psnd_pcm_access_mask_t; src: Psnd_pcm_access_mask_t); cdecl; external libasound;
procedure snd_pcm_access_mask_none(mask: Psnd_pcm_access_mask_t); cdecl; external libasound;
procedure snd_pcm_access_mask_any(mask: Psnd_pcm_access_mask_t); cdecl; external libasound;
function snd_pcm_access_mask_test(mask: Psnd_pcm_access_mask_t; val: Tsnd_pcm_access_t): longint; cdecl; external libasound;
function snd_pcm_access_mask_empty(mask: Psnd_pcm_access_mask_t): longint; cdecl; external libasound;
procedure snd_pcm_access_mask_set(mask: Psnd_pcm_access_mask_t; val: Tsnd_pcm_access_t); cdecl; external libasound;
procedure snd_pcm_access_mask_reset(mask: Psnd_pcm_access_mask_t; val: Tsnd_pcm_access_t); cdecl; external libasound;
function snd_pcm_format_mask_sizeof: Tsize_t; cdecl; external libasound;

function snd_pcm_format_mask_malloc(ptr: PPsnd_pcm_format_mask_t): longint; cdecl; external libasound;
procedure snd_pcm_format_mask_free(obj: Psnd_pcm_format_mask_t); cdecl; external libasound;
procedure snd_pcm_format_mask_copy(dst: Psnd_pcm_format_mask_t; src: Psnd_pcm_format_mask_t); cdecl; external libasound;
procedure snd_pcm_format_mask_none(mask: Psnd_pcm_format_mask_t); cdecl; external libasound;
procedure snd_pcm_format_mask_any(mask: Psnd_pcm_format_mask_t); cdecl; external libasound;
function snd_pcm_format_mask_test(mask: Psnd_pcm_format_mask_t; val: Tsnd_pcm_format_t): longint; cdecl; external libasound;
function snd_pcm_format_mask_empty(mask: Psnd_pcm_format_mask_t): longint; cdecl; external libasound;
procedure snd_pcm_format_mask_set(mask: Psnd_pcm_format_mask_t; val: Tsnd_pcm_format_t); cdecl; external libasound;
procedure snd_pcm_format_mask_reset(mask: Psnd_pcm_format_mask_t; val: Tsnd_pcm_format_t); cdecl; external libasound;
function snd_pcm_subformat_mask_sizeof: Tsize_t; cdecl; external libasound;

function snd_pcm_subformat_mask_malloc(ptr: PPsnd_pcm_subformat_mask_t): longint; cdecl; external libasound;
procedure snd_pcm_subformat_mask_free(obj: Psnd_pcm_subformat_mask_t); cdecl; external libasound;
procedure snd_pcm_subformat_mask_copy(dst: Psnd_pcm_subformat_mask_t; src: Psnd_pcm_subformat_mask_t); cdecl; external libasound;
procedure snd_pcm_subformat_mask_none(mask: Psnd_pcm_subformat_mask_t); cdecl; external libasound;
procedure snd_pcm_subformat_mask_any(mask: Psnd_pcm_subformat_mask_t); cdecl; external libasound;
function snd_pcm_subformat_mask_test(mask: Psnd_pcm_subformat_mask_t; val: Tsnd_pcm_subformat_t): longint; cdecl; external libasound;
function snd_pcm_subformat_mask_empty(mask: Psnd_pcm_subformat_mask_t): longint; cdecl; external libasound;
procedure snd_pcm_subformat_mask_set(mask: Psnd_pcm_subformat_mask_t; val: Tsnd_pcm_subformat_t); cdecl; external libasound;
procedure snd_pcm_subformat_mask_reset(mask: Psnd_pcm_subformat_mask_t; val: Tsnd_pcm_subformat_t); cdecl; external libasound;
function snd_pcm_status_sizeof: Tsize_t; cdecl; external libasound;
